...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NWr-NY-rTl">
                                <rect key="frame" x="0.0" y="54" width="414" height="27"/>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hC-ud-iM2">
                                <rect key="frame" x="20" y="101" width="374" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qUA-PM-XCn">
                                <rect key="frame" x="20" y="145" width="374" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" textContentType="username"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="din-s2-Xn2">
                                <rect key="frame" x="20" y="195" width="374" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3od-cy-Z2C">
...
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WDo-87-Czz">
                                <rect key="frame" x="150" y="455" width="114" height="20"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="fjj-gd-NsB"/>
                                </constraints>
                                <state key="normal" title="Sign up"/>
                                <connections>
                                    <segue destination="2xe-mP-5fU" kind="show" id="Qtd-df-Kga"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZKN-ZX-FPX">
                                <rect key="frame" x="20" y="406" width="374" height="50"/>
                                <color key="backgroundColor" red="0.64313725489999995" green="0.66666666669999997" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="q1V-lk-Tx2"/>
                                </constraints>
                                <state key="normal" title="SIGN UP"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="6"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </button>
...
                        <connections>
                            <outlet property="dataSource" destination="iVP-aw-YUi" id="Mgx-pG-6KF"/>
                            <outlet property="delegate" destination="iVP-aw-YUi" id="UTz-Fu-4lq"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Home" id="L8W-fp-fvi">
                        <barButtonItem key="leftBarButtonItem" title="Log out" id="5HY-O9-mdV"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="mnF-Q4-8D2"/>
                    </navigationItem>
                    <connections>
                        <outlet property="logoutBarButton" destination="5HY-O9-mdV" id="zmn-HO-6Aq"/>
                        <outlet property="newPostBarButton" destination="mnF-Q4-8D2" id="KxI-eJ-wTQ"/>
                        <segue destination="Wnr-tq-bWP" kind="show" identifier="showNewPost" id="ROr-iL-fkU"/>
...
